---- Changes since 1.300 ----
Added a section to the SSL Encryption page for uploading an existing PEM format SSL key and certificate.
Added buttons on the Proxy Servers and Downloads page for viewing and deleting cached files, and clearing the entire cache.
Fixed a bug that prevents module installs from RPMs from working.
---- Changes since 1.320 ----
Added an option to the Advanced page for supressing the display of Perl errors.
Added a new Mobile Device Options page for defining a custom theme and login process for mobile browsers.
---- Changes since 1.330 ----
Added an option to the Logging page to write Webmin actions to syslog.
Converted many pages to use new ui-lib.pl functions, and broke down long forms using tabs.
When Webmin's detected OS is automatically updated, Usermin's will be too (if it is an equivalent version).
---- Changes since 1.340 ----
Added an option to the Proxy Servers form to fallback to a direct connection if the proxy is down.
Added a tab showing details of the current cert, with a link to download in PEM or PKCS12 format.
---- Changes since 1.350 ----
Added an option to the Authentication page to block users with too many failed logins, as well as hosts.
Created the new Blocked Hosts and Users page to show blocks currently in force, and allow them to be cleared.
Added an option to the Ports and Addresses page to control if Webmin attempts to to reverse-resolve the connected-to IP address when issuing redirects, such as from non-SSL to SSL mode.
---- Changes since 1.360 ----
Added a field to the Advanced Options page to control the number of days that files in /tmp/.webmin are kept before automatic deletion.
---- Changes since 1.370 ----
The format for dates displayed by Webmin can be changed by a new option on the User Interface page.
---- Changes since 1.380 ----
Inheritance of the system path into Webmin's search path can be set on the Operating System and Environment page.